# kiko-vooster

./: .gitignore  API_DOCUMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_SETUP.md  ENV_SETUP.md  README.md  RECOMMENDATION_SYSTEM_PLAN.md  docker-compose.dev.yml  docker-compose.yml  run-local.md  start-dev.sh
.cursor/rules/: vooster__architecture.mdc  vooster__guideline.mdc  vooster__prd.mdc
.vooster/: project.json  rules.json
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt  start-backend.sh
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py  notifications.py  router.py  sync.py
backend/app/api/v1/endpoints/: audio.py  auth.py  scripts.py  users.py  words.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  middleware.py
backend/app/core/cache/: __init__.py  cache_manager.py  redis_client.py
backend/app/core/storage/: storage_manager.py
backend/app/models/: __init__.py  audio.py  notification.py  recommendation.py  sync.py  user.py  word.py
backend/app/services/: email_service.py  notification_service.py  scheduler_service.py  web_push_service.py
backend/app/services/audio/: __init__.py  audio_service.py
backend/app/services/auth/: oauth_service.py
backend/app/services/sync/: __init__.py  sync_mapping_service.py
backend/app/services/users/: user_service.py
backend/app/services/words/: __init__.py  jmdict_service.py  review_service.py  vocabulary_service.py  word_service.py
backend/app/utils/: japanese.py
backend/app/websocket/: __init__.py  connection_manager.py  sync_websocket.py
backend/docs/: SYNC_INTEGRATION_TEST_REPORT.md  audio_api_completion_report.md  audio_api_design.md  audio_api_result.md  audio_implementation_plan.md  common_modules_design.md  testing_guide.md
backend/tests/: conftest.py  test_audio_api.py  test_audio_integration.py  test_sync_basic.py  test_sync_integration.py
database/: CODE_REVIEW_CHECKLIST.md  PERFORMANCE_TEST.md  SETUP_GUIDE.md  VALIDATION_REPORT.md  deploy.sh  implementation_plan.md  schema_design.md  test_migration.sql  test_schema.py
database/migrations/: 01_create_base_tables.sql  02_create_indexes.sql  03_setup_rls.sql  04_create_triggers.sql  05_create_audio_tables.sql  06_create_sync_tables.sql  07_create_notification_tables.sql  07_setup_sync_rls.sql  08_create_recommendation_tables.sql
database/seeds/: 01_sample_data.sql
frontend/: .env.example  Dockerfile  Dockerfile.dev  package.json  start-frontend.sh  tailwind.config.js
frontend/docs/: BACKEND_INTEGRATION_PLAN.md  IMPLEMENTATION.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_SCENARIOS.md  UI_IMPLEMENTATION_PLAN.md  UI_INTEGRATION_TEST_REPORT.md  VOCABULARY_INTEGRATION_TEST_PLAN.md  VOCABULARY_LOGIC_IMPLEMENTATION_PLAN.md  VOCABULARY_UI_IMPLEMENTATION_PLAN.md  VOCABULARY_UI_INTEGRATION_REPORT.md
frontend/src/: app.html
frontend/src/lib/api/: audio.ts  auth.ts  client.ts  index.ts  mockServer.ts  scripts.ts  sync.ts  (+1 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/styles/: app.css
vooster-docs/: architecture.md  guideline.md  prd.md  sync_common_modules_design.md  sync_implementation_roadmap.md  sync_mapping_engine_design.md
(+45 files in other folders)
